# kde-thumnailer-apk-kf5

./: CMakeLists.txt  apkcreator.cpp
